[gd_scene load_steps=3 format=3 uid="uid://db3ipmukjssfw"]

[ext_resource type="Script" uid="uid://bj6ncu2hxw7q2" path="res://scripts/GameUI.gd" id="1_gameui"]

[sub_resource type="Theme" id="Theme_1"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gameui")

[node name="TimerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 35.0
grow_horizontal = 0

[node name="TimerLabel" type="Label" parent="TimerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -17.5
offset_right = 50.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "Time: 05:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 200.0
grow_vertical = 0

[node name="RoundLabel" type="Label" parent="RoundPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -78.0
offset_right = 199.0
offset_bottom = -28.0
grow_vertical = 0
text = "Round 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCountLabel" type="Label" parent="RoundPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -29.0
offset_right = 197.0
offset_bottom = -4.0
grow_vertical = 0
text = "Players Remaining: 8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndBakingButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 200.0
offset_right = 75.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1")
text = "END BAKING"

[node name="ModifierPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="ModifierPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Choose a Modifier"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ModifierPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VictoryMessage" type="Label" parent="Labels"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.623819, 1, 0.593898, 1)
theme_override_font_sizes/font_size = 48
text = "VICTORY! You are the last baker standing!"

[node name="EliminationMessage" type="Label" parent="Labels"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.172311, 0.27553, 1)
theme_override_font_sizes/font_size = 48
text = "player_name has been eliminated!"

[node name="DefeatMessage" type="Label" parent="Labels"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.172549, 0.27451, 1)
theme_override_font_sizes/font_size = 48
text = "DEFEAT! Your biscuit was the worst..."

[node name="JudgeComment" type="RichTextLabel" parent="Labels"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
